move .gradle/targets -> build/targets extract more magic strings add more helper methods for common file naming schemes